[add] 環境変数的な存在を追加した。

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,12 +1,11 @@
 name: learn-github-actions
 on: [push]
+env:
+  env_1: hashito
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "this is pen"
       - uses: actions/checkout@v4
       - run: |
-          ls -al
-          cd .github/workflows/
-          ls -al
+          echo "ths is env=${{ env.env_1 }}"
