--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           echo "ths is env=${{ env.env_1 }}"
-          echo ${{ github.ref }}
+          echo ${{ github.action }}
