--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,12 +1,11 @@
 name: learn-github-actions
 on: [push]
-env:
-  env_1: hashito
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
       - run: |
-          echo "ths is env=${{ env.env_1 }}"
-          echo ${{ github.action }}
+          echo "ths is env=$ENV_1"
+        env:
+          ENV_1: hashito
