--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,11 +4,6 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - run: |
-          echo "(1) ths is env=$ENV_1"
-          echo "ENV_1=$ENV_1" >> $GITHUB_ENV
-        env:
-          ENV_1: hashito
-      - run: |
-          echo "(2) ths is env=$ENV_1"
+          echo "(1) ths is env=${{ secrets.SECRET_GUM_COLOR }}"
